[fix] Make "Interested in Sponsoring?" copy more readable.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -178,7 +178,7 @@ a:hover.button {
 #organizers,
 #speakers,
 #love {
-  margin-top: 50px;
+  margin-top: 25px;
   border-top: 2px solid #999;
   padding-top: 20px;
 }
@@ -196,7 +196,6 @@ a:hover.button {
 #schedule .subheader,
 #location .subheader,
 #organizers .subheader {
-  border-bottom: 1px solid black;
   display: block;
   height: 40px;
   margin: 0 0 20px 0;
@@ -213,7 +212,8 @@ a:hover.button {
   text-align: left;
 }
 
-#sponsors .subheader h2 {
+#sponsors .subheader h2,
+#sponsor-list h2 a {
   color: #b4d183;
 }
 
@@ -231,6 +231,14 @@ a:hover.button {
   display: inline-block;
   margin: 0 auto;
   padding-bottom: 40px;
+}
+
+#sponsor-list h2 {
+  margin-top: 25px;
+}
+
+#sponsor-list h2 a {
+  text-decoration: underline;
 }
 
 #location .location05,
